[package]
name = "google-sheets-api"
version = "0.1.0"
edition = "2021"


[dependencies]
google-sheets4 = "5.0.3+20230119"
hyper = "^0.14"
hyper-rustls = "^0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
yup-oauth2 = "8.3.2"
eframe = "0.25.0"
egui_extras = "0.25.0"
dotenv = "0.15.0"
